--- a/ecommerce/templates/index.html
+++ b/ecommerce/templates/index.html
@@ -52,16 +52,16 @@
 
             <div class="col-xs-3 col-sm-3 col-md-3">
               <div class="card" style="width: 18rem;">
-                <img src='/media/{{ product.0.image }}' class="card-img-top" alt="...">
+                <img src='/media/{{ products.0.image }}' class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">{{ product.0.name }}</h5>
-                  <p class="card-text">{{ product.0.description|slice:":200" }}</p>
+                  <h5 class="card-title">{{ products.0.name }}</h5>
+                  <p class="card-text">{{ products.0.description|slice:":200" }}</p>
                   <a href="#" class="btn btn-primary">Add to Cart</a>
                 </div>
               </div>
             </div>
 
-            {% for i in product|slice:"1:" %}
+            {% for i in products|slice:"1:" %}
             <div class="col-xs-3 col-sm-3 col-md-3">
               <div class="card" style="width: 18rem;">
                 <img src='/media/{{ i.image }}' class="card-img-top" alt="...">
@@ -92,5 +92,23 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+
+    <div class="container-fluid">
+        <div class="row mx-auto">
+    {% for product in products|slice:"1:" %}
+
+
+            <div class="card mx-auto mt-5 mb-5" style="width: 18rem;">
+              <img src="/media/{{ product.image }}" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">{{ product.name }}</h5>
+                <p class="card-text">{{ product.price }}</p>
+                <a href="#" class="btn btn-primary">Add to Cart</a>
+              </div>
+            </div>
+
+    {% endfor %}
+        </div>
+    </div>
 
 {% endblock %}
