--- a/ecommerce/templates/login.html
+++ b/ecommerce/templates/login.html
@@ -1,7 +1,7 @@
 {% extends 'header.html' %}
 {% load static %}
 {% block title %}
-    <title>SignUp- Django Ecommerce</title>
+    <title>Login- Django Ecommerce</title>
 {% endblock %}
 
 {% block content %}
@@ -20,7 +20,7 @@
     <div class="container">
         <div class="p-4 m-4">
             <div class="col-lg-6 mx-auto table-bordered ">
-                <h3 class="mx-auto">Create An Account</h3>
+                <h3 class="mx-auto">Login</h3>
 
                 {% if error_message %}
                             <div class="alert alert-danger alert-dismissible fade show" role="alert">
@@ -34,30 +34,14 @@
 
                 <form action="" method="post" style=" padding:21px !important;">
                     {% csrf_token %}
-                    <div class="row">
-                        <div class="col">
-                          <input type="text" class="form-control" placeholder="First name" name="fname" value="{{ values.first_name }}" required>
-                        </div>
-                        <div class="col">
-                          <input type="text" class="form-control" placeholder="Last name" name="lname" value="{{ values.last_name }}" required>
-                        </div>
-                    </div>
+
                     <br>
                     <div class="form-group">
                         <input type="email" class="form-control" placeholder="E-Mail" name="email" value="{{ values.email }}" required>
                     </div>
 
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Phone Number" name="phone" value="{{ values.phone_number }}" required>
-                    </div>
-
-                    <div class="form-group">
                         <input type="password" class="form-control" placeholder="Password" name="password" required>
-                    </div>
-
-                    <div class="form-group form-check">
-                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                        <label class="form-check-label" for="exampleCheck1">Agree to Terms & Conditions</label>
                     </div>
 
                     <button type="submit" class="btn btn-primary" style="width: 150px;">Sign Up</button>
