--- a/templates/header.html
+++ b/templates/header.html
@@ -18,7 +18,7 @@
 <body class="bg-light">
     <!--Header-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <a class="navbar-brand" href="#">Djcodes</a>
+          <a class="navbar-brand" href="{% url 'index_shop' %}">Djcodes</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -27,7 +27,7 @@
 
             <ul class="navbar-nav mr-auto">
               <li class="nav-item">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{% url 'index_shop' %}">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'collection' %}">Collection</a>
@@ -35,6 +35,9 @@
 
             </ul>
               <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'login' %}">Login</a>
+                  </li>
                   <li class="nav-item">
                     <a class="nav-link" href="{% url 'signup' %}">Signup</a>
                   </li>
