--- a/templates/header.html
+++ b/templates/header.html
@@ -9,7 +9,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-
+        <link rel="icon" type="image/png" href="{% static 'shop/images/djcodes.png' %}"/>
+        <link rel="icon" type="image/png" href="{% static 'shop/images/djcodes.png' %}"/>
         {% block title %}
             {# Title Section #}
         {% endblock title %}
@@ -35,12 +36,25 @@
 
             </ul>
               <ul class="navbar-nav">
+                  {% if request.session.customer_id %}
+                  <li class="nav-item">
+                    <a class="nav-link" href="Cart">Cart</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="Order">Order</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="Logout">Logout</a>
+                  </li>
+                  {% else %}
                   <li class="nav-item">
                     <a class="nav-link" href="{% url 'login' %}">Login</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="{% url 'signup' %}">Signup</a>
                   </li>
+                  {% endif %}
+
               </ul>
             <form class="form-inline my-2 my-lg-0">
               <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
