--- a/ecommerce/templates/login.html
+++ b/ecommerce/templates/login.html
@@ -44,7 +44,7 @@
                         <input type="password" class="form-control" placeholder="Password" name="password" required>
                     </div>
 
-                    <button type="submit" class="btn btn-primary" style="width: 150px;">Sign Up</button>
+                    <button type="submit" class="btn btn-primary" style="width: 150px;">Login</button>
                 </form>
 
             </div>
