--- a/templates/header.html
+++ b/templates/header.html
@@ -41,7 +41,7 @@
                         <a class="nav-link" href="{% url 'cart' %}">Cart</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="Order">Order</a>
+                        <a class="nav-link" href="{% url 'orders' %}">Orders</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="{% url 'logout' %}">Logout</a>
